fluxcd/apps/overlays/production/paperless-ngx/statefulset-db-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paperless-db
spec:
  replicas: 1
  template:
    metadata:
      labels:
        policy.prplanit.com/access-class: postgres
        policy.prplanit.com/service-scope: pedestal-of-time.paperless.postgres
    spec:
      securityContext:
        runAsUser: 70
        runAsGroup: 70
        fsGroup: 70
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: postgres
          image: docker.io/postgres:18.6-alpine
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: pedestal-of-time-paperless-postgres
              mountPath: /var/lib/postgresql/data
            - name: postgres-run
              mountPath: /var/run/postgresql
            - name: postgres-tmp
              mountPath: /tmp
      volumes:
        - name: postgres-run
          emptyDir: {}
        - name: postgres-tmp
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: pedestal-of-time-paperless-postgres
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ceph-rbd-retain
        resources:
          requests:
            storage: 10Gi
