fluxcd/apps/overlays/production/paperless-ngx/statefulset-redis-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paperless-redis
spec:
  replicas: 1
  template:
    metadata:
      labels:
        policy.prplanit.com/access-class: redis
        policy.prplanit.com/service-scope: pedestal-of-time.paperless.redis
    spec:
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: redis
          image: docker.io/library/redis:8
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: pedestal-of-time-paperless-redis-data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: pedestal-of-time-paperless-redis-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ceph-rbd-retain
        resources:
          requests:
            storage: 1Gi
