fluxcd/apps/overlays/production/paperless-ngx/statefulset-webserver-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paperless-webserver
spec:
  replicas: 1
  template:
    metadata:
      labels:
        policy.prplanit.com/ingress: "true"
        policy.prplanit.com/cap.postgres: "true"
        policy.prplanit.com/access-scope-postgres: pedestal-of-time.paperless.postgres
        policy.prplanit.com/cap.redis: "true"
        policy.prplanit.com/access-scope-redis: pedestal-of-time.paperless.redis
    spec:
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:3.3.0
          volumeMounts:
            - name: pedestal-of-time-paperless-data
              mountPath: /usr/src/paperless/data
            - name: pedestal-of-time-paperless-media
              mountPath: /usr/src/paperless/media
            - name: pedestal-of-time-paperless-export
              mountPath: /usr/src/paperless/export
            - name: pedestal-of-time-paperless-consume
              mountPath: /usr/src/paperless/consume
  volumeClaimTemplates:
    - metadata:
        name: pedestal-of-time-paperless-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ceph-rbd-retain
        resources:
          requests:
            storage: 10Gi
    - metadata:
        name: pedestal-of-time-paperless-media
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ceph-rbd-retain
        resources:
          requests:
            storage: 20Gi
    - metadata:
        name: pedestal-of-time-paperless-export
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ceph-rbd-retain
        resources:
          requests:
            storage: 5Gi
    - metadata:
        name: pedestal-of-time-paperless-consume
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ceph-rbd-retain
        resources:
          requests:
            storage: 5Gi
