fluxcd/apps/overlays/production/paperless-ngx/service-paperless-webserver-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-webserver
  labels:
    policy.prplanit.com/ingress: "true"
