fluxcd/apps/overlays/production/paperless-ngx/httproute-xylem.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-ngx-xylem
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Private Apps (Pedestal of Time⚔️)"
spec:
  parentRefs:
    - name: phloem-gateway
      namespace: arylls-lookout
  hostnames:
    - "paperless.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: paperless-webserver
          port: 8000
